// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchEndpoints 1`] = `
Object {
  "collectedData": Object {},
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Device",
      ],
      "_key": "user_endpoint.595967ce83eb04bfddedaa7f29c8d10142a5bd30",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "10.8210.22000.978",
            "computerDnsName": "testmachine3",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exposureLevel": "None",
            "firstSeen": "2022-09-13T10:46:16.911Z",
            "healthStatus": "Inactive",
            "id": "595967ce83eb04bfddedaa7f29c8d10142a5bd30",
            "ipAddresses": Array [
              Object {
                "ipAddress": "10.1.1.196",
                "macAddress": "000D3ADD1C52",
                "operationalStatus": "Up",
                "type": "Ethernet",
              },
              Object {
                "ipAddress": "fe80::b5b8:8c4a:400b:6144",
                "macAddress": "000D3ADD1C52",
                "operationalStatus": "Up",
                "type": "Ethernet",
              },
              Object {
                "ipAddress": "127.0.0.1",
                "macAddress": "",
                "operationalStatus": "Up",
                "type": "SoftwareLoopback",
              },
              Object {
                "ipAddress": "::1",
                "macAddress": "",
                "operationalStatus": "Up",
                "type": "SoftwareLoopback",
              },
            ],
            "isAadJoined": false,
            "lastExternalIpAddress": "20.12.71.218",
            "lastIpAddress": "10.1.1.196",
            "lastSeen": "2022-09-15T16:34:14.1307367Z",
            "machineTags": Array [
              "evaluation",
            ],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": 22000,
            "osPlatform": "Windows11",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "21H2",
            "vmMetadata": Object {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/1b922e46-8595-4749-997a-1205e714cd91/resourceGroups/evaluation_5547f014f83d461e95e529fe36fd0219_3/providers/Microsoft.Compute/virtualMachines/TestMachine3",
              "subscriptionId": "1b922e46-8595-4749-997a-1205e714cd91",
              "vmId": "fd7b83e4-ddec-4c0d-8026-418c8a3b9da8",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "10.8210.22000.978",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "testmachine3",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "unknown",
      "deviceValue": "Normal",
      "displayName": "testmachine3",
      "exposureLevel": "None",
      "firstSeenOn": 1663065976911,
      "healthStatus": "Inactive",
      "id": "595967ce83eb04bfddedaa7f29c8d10142a5bd30",
      "ipAddresses": Array [
        "10.1.1.196",
        "fe80::b5b8:8c4a:400b:6144",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": false,
      "lastExternalIpAddress": "20.12.71.218",
      "lastIpAddress": "10.1.1.196",
      "lastSeenOn": 1663259654130,
      "machineTags": Array [
        "evaluation",
      ],
      "make": "unknown",
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": "unknown",
      "name": "testmachine3",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": 22000,
      "osPlatform": "Windows11",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/1b922e46-8595-4749-997a-1205e714cd91/resourceGroups/evaluation_5547f014f83d461e95e529fe36fd0219_3/providers/Microsoft.Compute/virtualMachines/TestMachine3",
      "riskScore": "None",
      "serial": "unknown",
      "subscriptionId": "1b922e46-8595-4749-997a-1205e714cd91",
      "version": "21H2",
      "vmId": "fd7b83e4-ddec-4c0d-8026-418c8a3b9da8",
    },
    Object {
      "_class": Array [
        "Device",
      ],
      "_key": "user_endpoint.614f81ab67349d2e017f7f8bee5764e1f4a6397d",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "30.122071.17543.0",
            "computerDnsName": "testserver2",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exposureLevel": "None",
            "firstSeen": "2022-09-13T08:57:51.994Z",
            "healthStatus": "Inactive",
            "id": "614f81ab67349d2e017f7f8bee5764e1f4a6397d",
            "ipAddresses": Array [
              Object {
                "ipAddress": "10.1.1.132",
                "macAddress": "6045BD8016FF",
                "operationalStatus": "Up",
                "type": "Other",
              },
              Object {
                "ipAddress": "fe80::6245:bdff:fe80:16ff",
                "macAddress": "6045BD8016FF",
                "operationalStatus": "Up",
                "type": "Other",
              },
              Object {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              Object {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "lastExternalIpAddress": "20.122.85.11",
            "lastIpAddress": "10.1.1.132",
            "lastSeen": "2022-09-16T08:58:29.4252411Z",
            "machineTags": Array [
              "evaluation",
            ],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "18.4",
            "vmMetadata": null,
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "30.122071.17543.0",
      "category": "endpoint",
      "cloudProvider": undefined,
      "computerDnsName": "testserver2",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "unknown",
      "deviceValue": "Normal",
      "displayName": "testserver2",
      "exposureLevel": "None",
      "firstSeenOn": 1663059471994,
      "healthStatus": "Inactive",
      "id": "614f81ab67349d2e017f7f8bee5764e1f4a6397d",
      "ipAddresses": Array [
        "10.1.1.132",
        "fe80::6245:bdff:fe80:16ff",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": false,
      "lastExternalIpAddress": "20.122.85.11",
      "lastIpAddress": "10.1.1.132",
      "lastSeenOn": 1663318709425,
      "machineTags": Array [
        "evaluation",
      ],
      "make": "unknown",
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": "unknown",
      "name": "testserver2",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": null,
      "osPlatform": "Ubuntu",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": undefined,
      "riskScore": "None",
      "serial": "unknown",
      "subscriptionId": undefined,
      "version": "18.4",
      "vmId": undefined,
    },
    Object {
      "_class": Array [
        "Device",
      ],
      "_key": "user_endpoint.f39177bfecabebc12576671381d1f95c68492ae3",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "10.8040.19041.1889",
            "computerDnsName": "testmachine1",
            "defenderAvStatus": "Unknown",
            "deviceValue": "Normal",
            "exposureLevel": "None",
            "firstSeen": "2022-09-13T08:42:48.607Z",
            "healthStatus": "Inactive",
            "id": "f39177bfecabebc12576671381d1f95c68492ae3",
            "ipAddresses": Array [
              Object {
                "ipAddress": "10.1.1.68",
                "macAddress": "6045BD78564A",
                "operationalStatus": "Up",
                "type": "Ethernet",
              },
              Object {
                "ipAddress": "fe80::addd:6e16:244c:acc3",
                "macAddress": "6045BD78564A",
                "operationalStatus": "Up",
                "type": "Ethernet",
              },
              Object {
                "ipAddress": "127.0.0.1",
                "macAddress": "",
                "operationalStatus": "Up",
                "type": "SoftwareLoopback",
              },
              Object {
                "ipAddress": "::1",
                "macAddress": "",
                "operationalStatus": "Up",
                "type": "SoftwareLoopback",
              },
            ],
            "isAadJoined": false,
            "lastExternalIpAddress": "10.14.19.12",
            "lastIpAddress": "10.1.1.68",
            "lastSeen": "2022-09-13T08:53:41.095Z",
            "machineTags": Array [
              "evaluation",
            ],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": 19043,
            "osPlatform": "Windows10",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "High",
            "version": "21H1",
            "vmMetadata": Object {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/1b922e46-8595-4749-997a-1205e714cd91/resourceGroups/evaluation_5547f014f83d461e95e529fe36fd0219_1/providers/Microsoft.Compute/virtualMachines/TestMachine1",
              "subscriptionId": "1b922e46-8595-4749-997a-1205e714cd91",
              "vmId": "5841813e-5f75-4789-bd48-6cdee0592115",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "10.8040.19041.1889",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "testmachine1",
      "createdOn": undefined,
      "defenderAvStatus": "Unknown",
      "deviceId": "unknown",
      "deviceValue": "Normal",
      "displayName": "testmachine1",
      "exposureLevel": "None",
      "firstSeenOn": 1663058568607,
      "healthStatus": "Inactive",
      "id": "f39177bfecabebc12576671381d1f95c68492ae3",
      "ipAddresses": Array [
        "10.1.1.68",
        "fe80::addd:6e16:244c:acc3",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": false,
      "lastExternalIpAddress": "10.14.19.12",
      "lastIpAddress": "10.1.1.68",
      "lastSeenOn": 1663059221095,
      "machineTags": Array [
        "evaluation",
      ],
      "make": "unknown",
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": "unknown",
      "name": "testmachine1",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": 19043,
      "osPlatform": "Windows10",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/1b922e46-8595-4749-997a-1205e714cd91/resourceGroups/evaluation_5547f014f83d461e95e529fe36fd0219_1/providers/Microsoft.Compute/virtualMachines/TestMachine1",
      "riskScore": "High",
      "serial": "unknown",
      "subscriptionId": "1b922e46-8595-4749-997a-1205e714cd91",
      "version": "21H1",
      "vmId": "5841813e-5f75-4789-bd48-6cdee0592115",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:595967ce83eb04bfddedaa7f29c8d10142a5bd30",
      "_key": "microsoft_defender_machine:595967ce83eb04bfddedaa7f29c8d10142a5bd30|manages|user_endpoint.595967ce83eb04bfddedaa7f29c8d10142a5bd30",
      "_toEntityKey": "user_endpoint.595967ce83eb04bfddedaa7f29c8d10142a5bd30",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    Object {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:614f81ab67349d2e017f7f8bee5764e1f4a6397d",
      "_key": "microsoft_defender_machine:614f81ab67349d2e017f7f8bee5764e1f4a6397d|manages|user_endpoint.614f81ab67349d2e017f7f8bee5764e1f4a6397d",
      "_toEntityKey": "user_endpoint.614f81ab67349d2e017f7f8bee5764e1f4a6397d",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    Object {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:f39177bfecabebc12576671381d1f95c68492ae3",
      "_key": "microsoft_defender_machine:f39177bfecabebc12576671381d1f95c68492ae3|manages|user_endpoint.f39177bfecabebc12576671381d1f95c68492ae3",
      "_toEntityKey": "user_endpoint.f39177bfecabebc12576671381d1f95c68492ae3",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
  ],
  "encounteredEntityKeys": Set {
    "user_endpoint.595967ce83eb04bfddedaa7f29c8d10142a5bd30",
    "user_endpoint.614f81ab67349d2e017f7f8bee5764e1f4a6397d",
    "user_endpoint.f39177bfecabebc12576671381d1f95c68492ae3",
    "microsoft_defender_account:local-integration-instance",
    "microsoft_defender_machine:595967ce83eb04bfddedaa7f29c8d10142a5bd30",
    "microsoft_defender_machine:614f81ab67349d2e017f7f8bee5764e1f4a6397d",
    "microsoft_defender_machine:f39177bfecabebc12576671381d1f95c68492ae3",
  },
  "encounteredTypes": Array [
    "microsoft_defender_account",
    "microsoft_defender_machine",
    "microsoft_defender_account_has_machine",
    "user_endpoint",
    "microsoft_defender_machine_manages_user_endpoint",
  ],
}
`;

exports[`#fetchMachines 1`] = `
Object {
  "collectedData": Object {},
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:595967ce83eb04bfddedaa7f29c8d10142a5bd30",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "aadDeviceId": null,
            "agentVersion": "10.8040.22000.832",
            "computerDnsName": "testmachine3",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exposureLevel": "Medium",
            "firstSeen": "2022-09-13T10:46:16.911Z",
            "healthStatus": "Active",
            "id": "595967ce83eb04bfddedaa7f29c8d10142a5bd30",
            "ipAddresses": Array [
              Object {
                "ipAddress": "10.1.1.196",
                "macAddress": "000D3ADD1C52",
                "operationalStatus": "Up",
                "type": "Ethernet",
              },
              Object {
                "ipAddress": "fe80::b5b8:8c4a:400b:6144",
                "macAddress": "000D3ADD1C52",
                "operationalStatus": "Up",
                "type": "Ethernet",
              },
              Object {
                "ipAddress": "127.0.0.1",
                "macAddress": "",
                "operationalStatus": "Up",
                "type": "SoftwareLoopback",
              },
              Object {
                "ipAddress": "::1",
                "macAddress": "",
                "operationalStatus": "Up",
                "type": "SoftwareLoopback",
              },
            ],
            "isAadJoined": false,
            "lastExternalIpAddress": "20.12.71.218",
            "lastIpAddress": "10.1.1.196",
            "lastSeen": "2022-09-13T20:05:43.9868473Z",
            "machineTags": Array [
              "evaluation",
            ],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": 22000,
            "osPlatform": "Windows11",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "21H2",
            "vmMetadata": Object {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/1b922e46-8595-4749-997a-1205e714cd91/resourceGroups/evaluation_5547f014f83d461e95e529fe36fd0219_3/providers/Microsoft.Compute/virtualMachines/TestMachine3",
              "subscriptionId": "1b922e46-8595-4749-997a-1205e714cd91",
              "vmId": "fd7b83e4-ddec-4c0d-8026-418c8a3b9da8",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "agentVersion": "10.8040.22000.832",
      "computerDnsName": "testmachine3",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "testmachine3",
      "function": Array [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "595967ce83eb04bfddedaa7f29c8d10142a5bd30",
      "machineTags": Array [
        "evaluation",
      ],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "testmachine3",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    Object {
      "_class": Array [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:614f81ab67349d2e017f7f8bee5764e1f4a6397d",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "aadDeviceId": null,
            "agentVersion": "30.122071.17543.0",
            "computerDnsName": "testserver2",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exposureLevel": "Medium",
            "firstSeen": "2022-09-13T08:57:51.994Z",
            "healthStatus": "Active",
            "id": "614f81ab67349d2e017f7f8bee5764e1f4a6397d",
            "ipAddresses": Array [
              Object {
                "ipAddress": "10.1.1.132",
                "macAddress": "6045BD8016FF",
                "operationalStatus": "Up",
                "type": "Other",
              },
              Object {
                "ipAddress": "fe80::6245:bdff:fe80:16ff",
                "macAddress": "6045BD8016FF",
                "operationalStatus": "Up",
                "type": "Other",
              },
              Object {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              Object {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "lastExternalIpAddress": "20.122.85.11",
            "lastIpAddress": "10.1.1.132",
            "lastSeen": "2022-09-14T00:58:16.964238Z",
            "machineTags": Array [
              "evaluation",
            ],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "18.4",
            "vmMetadata": null,
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "agentVersion": "30.122071.17543.0",
      "computerDnsName": "testserver2",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "testserver2",
      "function": Array [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "614f81ab67349d2e017f7f8bee5764e1f4a6397d",
      "machineTags": Array [
        "evaluation",
      ],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "testserver2",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    Object {
      "_class": Array [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:f39177bfecabebc12576671381d1f95c68492ae3",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "aadDeviceId": null,
            "agentVersion": "10.8040.19041.1889",
            "computerDnsName": "testmachine1",
            "defenderAvStatus": "Updated",
            "deviceValue": "Normal",
            "exposureLevel": "Medium",
            "firstSeen": "2022-09-13T08:42:48.607Z",
            "healthStatus": "Active",
            "id": "f39177bfecabebc12576671381d1f95c68492ae3",
            "ipAddresses": Array [
              Object {
                "ipAddress": "10.1.1.68",
                "macAddress": "6045BD78564A",
                "operationalStatus": "Up",
                "type": "Ethernet",
              },
              Object {
                "ipAddress": "fe80::addd:6e16:244c:acc3",
                "macAddress": "6045BD78564A",
                "operationalStatus": "Up",
                "type": "Ethernet",
              },
              Object {
                "ipAddress": "127.0.0.1",
                "macAddress": "",
                "operationalStatus": "Up",
                "type": "SoftwareLoopback",
              },
              Object {
                "ipAddress": "::1",
                "macAddress": "",
                "operationalStatus": "Up",
                "type": "SoftwareLoopback",
              },
            ],
            "isAadJoined": false,
            "lastExternalIpAddress": "10.14.19.12",
            "lastIpAddress": "10.1.1.68",
            "lastSeen": "2022-09-13T08:53:41.095Z",
            "machineTags": Array [
              "evaluation",
            ],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": 19043,
            "osPlatform": "Windows10",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "High",
            "version": "21H1",
            "vmMetadata": Object {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/1b922e46-8595-4749-997a-1205e714cd91/resourceGroups/evaluation_5547f014f83d461e95e529fe36fd0219_1/providers/Microsoft.Compute/virtualMachines/TestMachine1",
              "subscriptionId": "1b922e46-8595-4749-997a-1205e714cd91",
              "vmId": "5841813e-5f75-4789-bd48-6cdee0592115",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "agentVersion": "10.8040.19041.1889",
      "computerDnsName": "testmachine1",
      "createdOn": undefined,
      "defenderAvStatus": "Updated",
      "displayName": "testmachine1",
      "function": Array [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "f39177bfecabebc12576671381d1f95c68492ae3",
      "machineTags": Array [
        "evaluation",
      ],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "testmachine1",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "High",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:595967ce83eb04bfddedaa7f29c8d10142a5bd30",
      "_toEntityKey": "microsoft_defender_machine:595967ce83eb04bfddedaa7f29c8d10142a5bd30",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:614f81ab67349d2e017f7f8bee5764e1f4a6397d",
      "_toEntityKey": "microsoft_defender_machine:614f81ab67349d2e017f7f8bee5764e1f4a6397d",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:f39177bfecabebc12576671381d1f95c68492ae3",
      "_toEntityKey": "microsoft_defender_machine:f39177bfecabebc12576671381d1f95c68492ae3",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
  ],
  "encounteredEntityKeys": Set {
    "microsoft_defender_machine:595967ce83eb04bfddedaa7f29c8d10142a5bd30",
    "microsoft_defender_machine:614f81ab67349d2e017f7f8bee5764e1f4a6397d",
    "microsoft_defender_machine:f39177bfecabebc12576671381d1f95c68492ae3",
    "microsoft_defender_account:local-integration-instance",
  },
  "encounteredTypes": Array [
    "microsoft_defender_account",
    "microsoft_defender_machine",
    "microsoft_defender_account_has_machine",
  ],
}
`;
